# m90e26_driver

./: CMakeLists.txt
app/: CMakeLists.txt  prj.conf
app/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
app/src/: main.c
m90e26_module/: CMakeLists.txt
m90e26_module/drivers/: CMakeLists.txt  Kconfig
m90e26_module/drivers/sensor/: CMakeLists.txt  Kconfig
m90e26_module/drivers/sensor/m90e26/: CMakeLists.txt  Kconfig  m90e26.c  m90e26_emul.c
m90e26_module/dts/bindings/sensor/: atmel,m90e26-emul.yaml  atmel,m90e26.yaml
m90e26_module/include/drivers/sensor/: m90e26.h  m90e26_emul.h
tests/m90e26_driver/: CMakeLists.txt  prj.conf  testcase.yaml
tests/m90e26_driver/boards/: native_sim.overlay
tests/m90e26_driver/src/: main.c
